--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -49,6 +49,11 @@
 
  
 @media (min-width: $desktop-width) {
+    .main-nav__feedback li {
+        padding-top: 11px;
+        padding-bottom: 11px;
+    }
+
     .main-nav__toggle {
         display: none;
     }  
