--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -73,6 +73,8 @@
         display: flex;  
         justify-content: space-between;
         flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
    }
 
    .user-list>li:last-child {
@@ -142,6 +144,10 @@
         &:last-child {
             margin-right: 0;
         }
+    }
+
+    .user-list__bottom .user-list__item--second {
+        margin-bottom: 0;
     }
 }    
 
