--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -28,6 +28,14 @@
     svg {
         margin-left: 7px;
     }
+
+    &:hover {
+        svg {
+            margin-left: 10px;
+            width: 15px;
+            height: auto;
+        }
+    }
 }
 
 .new__date {
