--- a/source/sass/blocks/object.scss
+++ b/source/sass/blocks/object.scss
@@ -10,6 +10,10 @@
     box-sizing: border-box;
     background-color: #F7F7F7;
     border-radius: 15px;
+
+    &:hover {
+        box-shadow: 0 0 15px rgb(51 51 51 / 20%);
+    }
 }
 
 .object__title {
